# scraps

./: .gitignore  Bot.py  CMakeLists.txt  CommandHandler.py  Formatting.py  README.rst  blake.cpp  bot_service.tac  keygen.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  md5.cpp  md5.h  opengl_proj.cpp  sha1.cpp  sha1.h  sha256.cpp
cmake/: FindFTGL.cmake
